--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <footer>
     
-    <p><a href="https://twitter.com/klimslava" target="_blank">Twitter</a> | <a href="https://github.com/vlandham/gates_bubbles" target="_blank">Code</a> | <a href="https://www.crunchbase.com/investor-leaderboard" target="_blank">Data</a></p>
+    <p><a href="https://twitter.com/klimslava" target="_blank">Twitter</a> | <a href="https://github.com/klimslava/startup-funds-visual.git" target="_blank">Code</a> | <a href="https://www.crunchbase.com/investor-leaderboard" target="_blank">Data</a></p>
     <p>Disclaimer: The data presented here shows only top level VC firms and Angle investors</p>
     <p>eddy@leapforwardlabs.com</p>
     </footer>
