--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
   <div id="container" class="container">
     <header>
     <h1 class="page-title" style="margin-top:10px;">Startup funding visualized</h1>
+    <div style="float: right;">
+      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Startup Funding Visualised" data-via="klimslava" data-hashtags="startup">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    </div>
     </header>
     <div id="main" role="main">
       <div id="view_selection" class="btn-group" style="margin-top:20px;">
@@ -45,7 +49,7 @@
     
     <p><a href="https://twitter.com/klimslava" target="_blank">Twitter</a> | <a href="https://github.com/klimslava/startup-funds-visual.git" target="_blank">Code</a> | <a href="https://www.crunchbase.com/investor-leaderboard" target="_blank">Data</a></p>
     <p>Disclaimer: The data presented here shows only top level VC firms and Angle investors</p>
-    <p>eddy@leapforwardlabs.com</p>
+    <p>Drop me a line for comments and suggestions <a href="mailto:eddy@leapforwardlabs.com?Subject=Startup%20Funds%20Suggestions" target="_top">eddy@leapforwardlabs.com</a></p>
     </footer>
   </div> 
 
