--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <footer>
     
     <p><a href="https://twitter.com/klimslava" target="_blank">Twitter</a> | <a href="https://github.com/klimslava/startup-funds-visual.git" target="_blank">Code</a> | <a href="https://www.crunchbase.com/investor-leaderboard" target="_blank">Data</a></p>
-    <p>Disclaimer: The data presented here shows only top level VC firms and Angle investors</p>
+    <p>Disclaimer: The data presented here shows only top level VC firms and Angel investors</p>
     <p>Drop me a line for comments and suggestions <a href="mailto:eddy@leapforwardlabs.com?Subject=Startup%20Funds%20Suggestions" target="_top">eddy@leapforwardlabs.com</a></p>
     </footer>
   </div> 
