Added google analytics

--- a/index.html
+++ b/index.html
@@ -74,10 +74,19 @@
         });
     });
   </script>
-
+  <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+    try {
+      var pageTracker = _gat._getTracker("UA-63068461-1");
+    pageTracker._trackPageview();
+    } catch(err) {}
+  </script>
 
   <script>
-    //window._gaq = [['_setAccount',''],['_trackPageview'],['_trackPageLoadTime']];
+     
     Modernizr.load({
       load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
     });
