--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <div id="container" class="container">
     <header>
-    <h1 class="page-title" style="margin-top:10px;">Startup funding visualized</h1>
+    <h1 class="page-title" style="margin-top:10px;">Startup funding visualized<span style="font-size:20px;">(Between January 2011 and April 2015)</span></h1>
     <div style="float: right;">
       <a href="https://twitter.com/share" class="twitter-share-button" data-text="Startup Funding Visualised" data-via="klimslava" data-hashtags="startup">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
