Added explanation for buttons

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
           <a href="#" id="series-b" class="btn active">Series B-C</a>
           <a href="#" id="series-d" class="btn active">Series D-G</a>
           <a href="#" id="private" class="btn active">Private Equity</a>
+
       </div>
-      
+      <span><p>(press to view less)</p></span>
       <div id="vis"></div>
     </div>
     <footer>
