--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <div id="main" role="main">
       <div id="view_selection" class="btn-group" style="margin-top:20px;">
-          <a href="#" id="seed" class="btn active">Seed/Angle</a>
+          <a href="#" id="seed" class="btn active">Seed/Angel</a>
           <a href="#" id="series-a" class="btn active">Series A</a>
           <a href="#" id="series-b" class="btn active">Series B-C</a>
           <a href="#" id="series-d" class="btn active">Series D-G</a>
